--- a/src/assets/languages/en.json
+++ b/src/assets/languages/en.json
@@ -413,8 +413,8 @@
                 },
                 {
                   "name": "Wify Plata",
-                  "position": "CGO",
-                  "description": "Driving global expansion beyond LatAm, leading investor negotiations, and executing high-impact growth strategies."
+                  "position": "CXO",
+                  "description": "Drives brand, marketing, and strategy—aligning design, messaging, and growth to boost ChatBet’s UX and positioning."
                 },
                 {
                   "name": "Jean Varon",
