--- a/src/assets/languages/es.json
+++ b/src/assets/languages/es.json
@@ -415,8 +415,8 @@
       },
       {
         "name": "Wify Plata",
-        "position": "CGO",
-        "description": "Impulsa la expansión global más allá de LatAm, liderando negociaciones con inversionistas y ejecutando estrategias de crecimiento de alto impacto."
+        "position": "CXO",
+        "description": "Dirige la marca, el marketing y la estrategia, alineando el diseño, los mensajes y el crecimiento para potenciar la experiencia de usuario (UX) y el posicionamiento de ChatBet."
       },
       {
         "name": "Jean Varon",
