--- a/src/assets/languages/en.json
+++ b/src/assets/languages/en.json
@@ -434,7 +434,7 @@
     "description": "Stay up to date with ChatBet's latest achievements, industry recognitions, and global expansion. From exclusive event invitations to game-changing partnerships, this is where we showcase our journey as we redefine the future of betting.",
     "notices": [
       {
-        "image": "assets/notice/notice3.png",
+        "image": "assets/notice/notice3.svg",
         "title": "ChatBet at BIS Sigma Brazil – All In on LATAM",
         "date": "10-jan-2025",
         "details": [
