--- a/src/assets/languages/en.json
+++ b/src/assets/languages/en.json
@@ -537,5 +537,11 @@
       "title": "Frequently Asked Questions",
       "intro": "These are the most commonly asked questions about ChatBet"
     }
+  },
+
+
+  "footer": {
+    "redes": "Our Networks",
+    "info":"Do Not Hesitate to Contact Us!"
   }
       }
