--- a/src/assets/languages/es.json
+++ b/src/assets/languages/es.json
@@ -251,7 +251,7 @@
           "description": "Sin búsquedas o entradas manuales."
         },
         {
-          "title": "Confirma y apuesta al instante 🤙: ",
+          "title": "Confirma y apuesta al instante: ",
           "description": "Confirmación rápida, acción instantánea."
         },
         {
