--- a/src/assets/languages/en.json
+++ b/src/assets/languages/en.json
@@ -212,7 +212,7 @@
         "howItWorks": {
           "title": "As Easy as 1, 2, 3… ",
           "titlescond": "For Operators & Players",
-          "titleheader":"How Does it Work",
+          "titleheader":"How it Works",
           "secondtitle": "Seamless Integration",
           "operators": {
             "title": "Operators",
