--- a/src/assets/languages/es.json
+++ b/src/assets/languages/es.json
@@ -340,6 +340,10 @@
     ],
     "cta": "Comienza a integrar hoy"
   },
+  "calender":{
+        "pick": "Elige la hora que más te convenga",
+        "notReady": "¿Prefieres que te contactemos primero? Llena el formulario y te escribiremos pronto."
+        },
   "contactUs": {
     "title": "¡Únete al futuro de las apuestas con IA de ChatBet!",
     "titleheader": "Contáctanos",
