--- a/src/assets/languages/en.json
+++ b/src/assets/languages/en.json
@@ -340,6 +340,10 @@
           ],
           "cta": "Start Integrating Today"
         },
+        "calender":{
+        "pick": "Pick a time that works for you",
+        "notReady": "Not ready to book just yet? Send us a message and we'll get back to you"
+        },
         "contactUs": {
           "title": "Join the Future of AI-Powered Betting with ChatBet!",
           "titleheader":"Contact Us",
