--- a/src/assets/languages/es.json
+++ b/src/assets/languages/es.json
@@ -396,7 +396,7 @@
     "text": "Liderar el cambio global hacia los juegos basados en chat, haciendo obsoletas las plataformas tradicionales de apuestas al ofrecer una forma más rápida, inteligente e intuitiva de apostar."
   },
   "team": {
-    "title": "El Equipo",
+    "title": "El equipo",
     "heading": "Conoce al equipo detrás de ChatBet",
     "description": "Nuestro equipo reúne a expertos en IA, gaming y tecnología, unidos por una pasión por la innovación.",
     "members": [
