--- a/src/assets/languages/es.json
+++ b/src/assets/languages/es.json
@@ -341,7 +341,7 @@
     "cta": "Comienza a integrar hoy"
   },
   "calender":{
-        "pick": "Elige la hora que más te convenga",
+        "pick": "Elige la hora que más te convenga.",
         "notReady": "¿Prefieres que te contactemos primero? Llena el formulario y te escribiremos pronto."
         },
   "contactUs": {
